4503.	[cleanup]	"make uninstall" now removes files installed by
			BIND. (This currently excludes Python files
			due to lack of support in setup.py.) [RT #42912]

4502.	[func]		Report multiple and experimental options when printing
			grammar. [RT #43134]

4500.	[bug]		Support modifier I64 in isc__print_printf. [RT #43526]

4499.	[port]		MacOSX: silence deprecated function warning
			by using arc4random_stir() when available
			instead of arc4random_addrandom(). [RT #43503]

4498.	[test]		Simplify prerequisite checks in system tests.
			[RT #43516]

4497.	[port]		Add support for OpenSSL 1.1.0. [RT #41284]

4496.	[func]		dig: add +idnout to control whether labels are
			display in punycode or not.  Requires idn support
			to be enabled at compile time. [RT #43398]

4495.	[bug]		A isc_mutex_init call was not being checked.
			[RT #43391]

4494.	[bug]		Look for <editline/readline.h>. [RT #43429]

4493.	[bug]		bin/tests/system/dyndb/driver/Makefile.in should use
			SO_TARGETS. [RT# 43336]

4492.	[bug]		irs_resconf_load failed to initialise sortlistnxt
			causing bad writes if resolv.conf contained a
			sortlist directive. [RT #43459]

4491.	[bug]		Improve message emitted when testing whether sendmsg
			works with TOS/TCLASS fails. [RT #43483]

4490.	[maint]		Added AAAA (2001:500:12::d0d) for G.ROOT-SERVERS.NET.

4489.	[security]	It was possible to trigger assertions when processing
			a response. (CVE-2016-8864) [RT #43465]

4488.	[port]		Darwin: use -framework for Kerberos. [RT #43418]

4487.	[test]		Make system tests work on Windows. [RT #42931]

4486.	[bug]		Look in $prefix/lib/pythonX.Y/site-packages for
			the python modules we install. [RT #43330]

4485.	[bug]		Failure to find readline when requested should be
			fatal to configure. [RT #43328]

4484.	[func]		Check prefixes in acls to make sure the address and
			prefix lengths are consistent.  Warn only in
			BIND 9.11 and earlier. [RT #43367]

4483.	[bug]		Address use before require check and remove extraneous