@@ -1,3 +1,5 @@
+4505.	[port]		Use IP_PMTUDISC_OMIT if available. [RT #35494]
+
 4503.	[cleanup]	"make uninstall" now removes files installed by
 			BIND. (This currently excludes Python files
 			due to lack of support in setup.py.) [RT #42912]
